# GBDebugger

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
example/: example.cpp
include/: DebuggerBackend.h  DebuggerTypes.h  GBDebugger.h  IDebuggerPanel.h  PaletteManager.h  SpriteParser.h  TileDecoder.h  TileRenderer.h
include/panels/: CPUStatePanel.h  ControlPanel.h  FlagsPanel.h  MemoryViewerPanel.h  VRAMViewerPanel.h
src/: DebuggerBackend.cpp  GBDebugger.cpp  PaletteManager.cpp  SpriteParser.cpp  TileDecoder.cpp  TileRenderer.cpp
src/panels/: CPUStatePanel.cpp  ControlPanel.cpp  FlagsPanel.cpp  MemoryViewerPanel.cpp  VRAMViewerPanel.cpp
test/: APILayerTest.cpp  CMakeLists.txt  DataStructuresTest.cpp
